<resources>
    <string name="app_name">Food Pal</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="app_login">Login or Create Your New Account</string>
    <string name="app_forget">Forget Password?</string>
    <string name="app_create"> Create An Account</string>
    <string name="join">Join Group</string>
    <string name="create">Create</string>
    <string name="joined">Your Group</string>
    <string name="list_restaurant">List of Res</string>
    <string name="profile">Profile</string>
    <string name="search">Search:</string>
    <string name="register">Register</string>
    <string name="register_name">Name:</string>
    <string name="user_gender">Gender:</string>
    <string name="user_age">Age:</string>
    <string name="user_password">Password</string>
    <string name="required_info">*</string>
    <string name="user_email">E-mail:</string>
    <string name="user_bod">Birthday:</string>
    <string name="user_register">Register</string>
    <string name="user_description">Self Description</string>
    <string name="user_major">Major:</string>
    <string name="edit_profile">Edit</string>
    <string name="settings">Settings</string>
    <string name="group_name">Group Name:</string>
    <string name="time">Meal Time:</string>
    <string name="restaurant">Restaurant:</string>
    <string name="register_to_login">Already had an account? Login here</string>
    <string name="forget_psw">Forgot password?</string>
    <string name="psw_guidance">To reset your password, we will need your register Email, to send you password.</string>
    <string name="choose_date">Choose Date</string>
    <string name="choose_time">Choose Time</string>
    <string name="reset_btn">RESET PASSWORD</string>
    <string name="from_register_login">Go back</string>
    <string name="back_login">LOGIN</string>
    <string name="leave_group_confirm">Are you sure leaving the group?</string>
    <string name="leave">Leave</string>
    <string name="cancel">Cancel</string>
    <string name="title_home">Home</string>
    <string name="title_mygroup">My Group</string>
    <string name="title_restaurant">Restaurants</string>
    <string name="title_settings">Settings</string>
    <string name="discover_restaurants_heading">Discover Restaurants</string>
    <string name="zomato_api_credit">Powered by Zomato API</string>
    <string name="your_location_text">Your Location:</string>
    <string name="search_for_restaurant">Search for restaurants…</string>
    <string name="btn_discover_restaurant">Go</string>
    <string name="title_activity_main_home">123</string>
    <string name="Tap">Tap to choose</string>
    <string name="EnterGroup">Enter something</string>


    <string-array name="hours_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>

    <string-array name="minute_array">
        <item>00</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
    </string-array>


    <string-array name="month_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="date_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="cities_array">
        <item>Halifax</item>
        <item>Dartmouth</item>
    </string-array>

</resources>
