<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.phili.foodpaldemo.DiscoverRestaurantActivity">

    <TextView
        android:id="@+id/restaurant_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/discover_restaurants_heading"
        android:textAlignment="center"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/zomato_api"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/restaurant_heading"
        android:layout_marginTop="10dp"
        android:text="@string/zomato_api_credit"
        android:textAlignment="center"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/zomato_api"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_user_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:text="@string/your_location_text"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/txt_search_for_restaurants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:hint="@string/search_for_restaurant" />

    <Button
        android:id="@+id/btn_discover_restaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_search_for_restaurants"
        android:layout_centerInParent="true"
        android:text="@string/btn_discover_restaurant" />

</RelativeLayout>
