<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditText
        android:id="@+id/text_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textSize="15dp"/>

    <ListView
        android:layout_above="@+id/table_button"
        android:layout_below="@+id/text_search"
        android:id="@+id/join_list"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:descendantFocusability="afterDescendants"
        android:divider="@color/colorWhite"
        android:dividerHeight="10dp"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:fastScrollEnabled="false"
        android:scrollbars="none"
        android:scrollbarFadeDuration="10"
        android:scrollbarStyle="outsideInset"
        android:scrollbarTrackVertical="@drawable/scrollbar_vertical_track"
        android:scrollbarThumbVertical="@drawable/scrollbar_vertical_thumb" >

    </ListView>

    <TableLayout
        android:id="@+id/table_button"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_join"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@color/colorMilkWhite"
                android:text="@string/join"
                android:textAppearance="@style/TextAppearance.Compat.Notification.Media" />
            <Button
                android:id="@+id/btn_joined"
                android:layout_weight="1"
                android:layout_height="70dp"
                android:layout_width="0dp"
                android:textAppearance="@style/TextAppearance.Compat.Notification.Media"
                android:background="@color/colorGray"
                android:text="@string/joined"/>

            <Button
                android:id="@+id/btn_list"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@color/colorMilkWhite"
                android:text="@string/list_restaurant"
                android:textAppearance="@style/TextAppearance.Compat.Notification.Media" />

            <Button
                android:id="@+id/btn_set"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@color/colorMilkWhite"
                android:text="@string/profile"
                android:textAppearance="@style/TextAppearance.Compat.Notification.Media" />
        </TableRow>
    </TableLayout>
</RelativeLayout>
