<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.phili.foodpaldemo.ForgetPswActivity">

    <ImageView android:src="@drawable/foodpal_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        />
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:text="@string/forget_psw"/>

    <TextView
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:text="@string/psw_guidance"/>


    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/reset_psw_btn"
            android:text="Email"/>

        <EditText
            android:id="@+id/reset_psw_email"
            android:layout_width="360dp"
            android:hint="enter your email"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/reset_psw_btn"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/reset_psw_btn"
        android:layout_gravity="center"
        android:text="@string/reset_btn" />

    <TextView
        android:id="@+id/back_to_login"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/back_login"/>

</LinearLayout>
