<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.phili.foodpaldemo.Fragment.RestaurantsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/restaurant_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/discover_restaurants_heading"
            android:textAlignment="center"
            android:textSize="35sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:typeface="monospace"/>

        <TextView
            android:id="@+id/zomato_api"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/restaurant_heading"
            android:layout_marginTop="10dp"
            android:text="@string/zomato_api_credit"
            android:textColor="@color/information_title_color"
            android:textAlignment="center"
            android:textSize="15sp"
            android:typeface="monospace"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/zomato_api"
            android:layout_marginTop="100dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_user_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:typeface="monospace"
                android:textColor="@color/colorBlack"
                android:text="@string/your_location_text"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/txt_search_for_restaurants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_layout"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"
            android:typeface="monospace"
            android:hint="@string/search_for_restaurant" />

        <Button
            android:id="@+id/btn_discover_restaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_search_for_restaurants"
            android:background="@drawable/button_background"
            android:layout_margin="30dp"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="15dp"
            android:textColor="@color/colorWhite"
            android:layout_centerInParent="true"
            android:typeface="monospace"
            android:text="@string/btn_discover_restaurant" />

    </RelativeLayout>

</FrameLayout>
