<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ListView
        android:id="@+id/join_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:descendantFocusability="afterDescendants"
        android:divider="@color/colorWhite"
        android:dividerHeight="10dp"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:fastScrollEnabled="false"
        android:scrollbars="none"
        android:scrollbarFadeDuration="10"
        android:scrollbarStyle="outsideInset"
        android:scrollbarTrackVertical="@drawable/scrollbar_vertical_track"
        android:scrollbarThumbVertical="@drawable/scrollbar_vertical_thumb" >

    </ListView>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_join"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/join"
                android:background="@color/colorMilkWhite"/>

            <Button
                android:id="@+id/btn_create"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/create"
                android:background="@color/colorMilkWhite"/>

            <Button
                android:id="@+id/btn_list"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/list_restaurant"
                android:background="@color/colorMilkWhite"/>

            <Button
                android:id="@+id/btn_set"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/set"
                android:background="@color/colorMilkWhite"/>
        </TableRow>
    </TableLayout>
</LinearLayout>
