<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        tools:context="com.example.phili.foodpaldemo.RegisterActivity"
        >


    <ImageView
        android:id="@+id/imagelogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:src="@drawable/foodpal_logo" />


    <RelativeLayout
        android:id="@+id/layoutemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imagelogo"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/edittext_layout"
            android:fontFamily="@font/nunito_semibold"
            android:hint="@string/user_email"
            android:inputType="textEmailAddress"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="15dp"

            android:textCursorDrawable="@drawable/color_cursor" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layoutpsw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/layoutemail"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/edittext_layout"
            android:fontFamily="@font/nunito_semibold"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="15dp" />

    </RelativeLayout>


    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutpsw"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/nunito_semibold"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="15dp"
        android:text="@string/user_register"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_register"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:fontFamily="@font/nunito_semibold"
        android:padding="10dp"
        android:text="@string/register_to_login"
        android:textSize="15sp" />
    </RelativeLayout>
