<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="25dp"

        android:textSize="30sp" />


    <TextView
        android:id="@+id/group_name"
        android:layout_marginLeft="15dp"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/create_name"
        android:text="@string/group_name"
        android:textSize="20dp" />

    <EditText
        android:layout_marginTop="100dp"
        android:layout_marginLeft="137dp"
        android:id="@+id/create_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null" />

    <TextView
        android:id="@+id/meal_time"
        android:layout_marginLeft="15dp"
        android:layout_below="@+id/group_name"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/time"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/create_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_name"
        android:layout_marginTop="35dp"
        android:background="@null"/>


    <TextView
        android:id="@+id/restaurant"
        android:layout_width="108dp"
        android:layout_marginLeft="15dp"
        android:layout_height="wrap_content"
        android:text="@string/restaurant"
        android:layout_below="@+id/meal_time"
        android:textSize="20dp"
        android:layout_marginTop="35dp"/>

    <ImageButton
        android:id="@+id/create_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/meal_time"
        android:layout_marginStart="11dp"
        android:layout_marginTop="23dp"
        android:layout_toEndOf="@+id/group_name"
        android:onClick="onClick"
        android:src="@drawable/ic_action_place"
        android:text="Choose a Place" />

    <TextView
        android:id="@+id/place_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/restaurant"
        android:layout_marginStart="27dp"
        android:layout_toEndOf="@+id/create_res"
         />

    <Button
        android:id="@+id/btn_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_res"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/create"
        android:textColor="@color/colorWhite"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinnerMonth"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/create_name"
        android:layout_marginLeft="110dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/meal_time"
        android:layout_alignBottom="@+id/meal_time"
        android:layout_toEndOf="@+id/spinnerMonth"
        android:text="M"
        android:textSize="20dp"
        android:id="@+id/textYear" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/meal_time"
        android:layout_alignBottom="@+id/meal_time"
        android:layout_toEndOf="@+id/spinnerDate"
        android:text="D"
        android:textSize="20dp"
        android:id="@+id/textMonth" />

    <Spinner
        android:id="@+id/spinnerDate"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/spinnerMonth"
        android:layout_toEndOf="@+id/textYear" />

    <Spinner
        android:id="@+id/spinnerHour"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/spinnerMonth"
        android:layout_toEndOf="@+id/textMonth" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/meal_time"
        android:layout_alignBottom="@+id/meal_time"
        android:layout_toEndOf="@+id/spinnerHour"
        android:text="H"
        android:textSize="20dp"
        android:id="@+id/textHour" />

    <Spinner
        android:id="@+id/spinnerMinute"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/spinnerMonth"
        android:layout_toEndOf="@+id/textHour" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/meal_time"
        android:layout_alignBottom="@+id/meal_time"
        android:layout_toEndOf="@+id/spinnerMinute"
        android:text="M"
        android:textSize="20dp"
        android:id="@+id/textMinute" />


</RelativeLayout>
